@@ -58,6 +58,8 @@ Version 1.3.9+svn:
    * Animation engine allow multiple type of frames (a la "missile frames")
      for all types of anims, you can have multiple such anims using different
      frame names
+   * a new type of animation is triggered when a unit is selected. (WML
+     support to come shortly)
  * miscellaneous and bug fixes:
    * added a new log domain 'mp_server'
    * added a new log level 'debug'
